push startup onto index

--- a/angel.html
+++ b/angel.html
@@ -21,8 +21,8 @@
   <div id="navbar">
     <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
     <div class="navLinks" id="navLinksEx">
-      <a href="./angel-form" class="navLink">Angel sign up</a>
-      <a href="./startup-form" class="navLink">Founder sign up</a>
+      <a href="./angel" class="navLink">Investors</a>
+      <a href="./" class="navLink">Founders</a>
     </div>
     <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
     <div id="navExpand" onclick="expandNav()">
@@ -53,11 +53,11 @@
             <div class="numText">accelerators</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">30<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">35<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">angels</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">400<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">400<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">companies</div>
           </div>
           <!-- <div class="flexColumn numCol">
