--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div id="navbar">
     <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
     <div class="navLinks" id="navLinksEx">
-      <a href="./angel-form" class="navLink">Angel sign up</a>
-      <a href="./startup-form" class="navLink">Founder sign up</a>
+      <a href="./angel" class="navLink">Investors</a>
+      <a href="./" class="navLink">Founders</a>
     </div>
     <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
     <div id="navExpand" onclick="expandNav()">
@@ -35,12 +35,15 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Connect with the builders of tomorrow
+  			Raise money from investors <span style="color:#721cff; font-family: dmBold;">today</span>
   		</p> 
+      <div class="blackTitle minimize" style="color: white; text-align: center;">
+        No commission, no fee, no cut
+      </div>
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
-      <a href="./angel-form" class="callButton centerButton">SIGN UP</a>
+      <a href="./startup-form" class="callButton centerButton">SIGN UP</a>
     </div>
     <div class="ecosystemBackground" id="shrinkingBox">
       <div class="ecosystem">
@@ -53,11 +56,11 @@
             <div class="numText">accelerators</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">35<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">35<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">angels</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">400<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">400<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">companies</div>
           </div>
           <!-- <div class="flexColumn numCol">
@@ -71,14 +74,14 @@
     <div class="wrapGrid flexCenter">
       <div class="emptySpace"></div>
       <div class="whiteTitle" style="color: #721cff">
-        Our Startup Funnel
+        Get funding in 3 easy steps
       </div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img class="infoImg" src="./assets/startupSelection.png" />
+            <img class="infoImg" src="./assets/application.png" />
           </div>
-          <div class="disclaimer">*synthetic companies presented for illustration purposes, not actual startup profiles</div>
+          <div class="disclaimer">*synthetic company information presented for illustration purposes, not actual startup profile</div>
         </div>
         <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
@@ -86,9 +89,9 @@
               STEP ONE
             </div>
           </div>
-          <div class="blackTitle">Startup Selection</div>
-          <div class="whiteText">We select the best startups in North America through partnerships with accelerators and founder networks</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+          <div class="blackTitle">Join our Community</div>
+          <div class="whiteText">Apply now to let us know who you are and get exposure to our Angel network</div>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
@@ -104,13 +107,13 @@
               STEP TWO
             </div>
           </div>
-          <div class="blackTitle">AI Analysis</div>
-          <div class="whiteText">We screen each startup through our in-house AI model</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+          <div class="blackTitle">Pitch your startup</div>
+          <div class="whiteText">Get invited to our demo-days and partnered events to pitch your startup</div>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img class="infoImg" src="./assets/aiAnalysis.png" />
+            <img class="infoImg" src="./assets/presenting.png" />
           </div>
           <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
         </div>
@@ -123,8 +126,9 @@
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img class="infoImg" src="./assets/dataRoom.png" />
+            <img class="infoImg" src="./assets/warmIntros2.png" />
           </div>
+          <div class="disclaimer">*synthetic individual presented for illustration purposes, not actual startup profile</div>
         </div>
         <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
@@ -133,170 +137,41 @@
               STEP THREE
             </div>
           </div>
-          <div class="blackTitle">Your Data Room</div>
-          <div class="whiteText">Get unlimited access to your data room with custom features</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
-        </div>
-      </div>
-
-      <div class="emptySpace">
-        <img height="50" width="100" class="arrow" src="./assets/arrow3.png" style="transform: translateX(70px);"  />
-      </div>
-
-      <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn stepsBox reveal">
-          <div class="flexRow imageTitle">
-            <!-- <img height="20" width="20" 2src="./assets/world.png" /> -->
-            <div class="blueTitle">
-              STEP FOUR
-            </div>
-          </div>
           <div class="blackTitle">Warm Introductions</div>
-          <div class="whiteText">We will provide warm introductions to any startup founder that caught your attention</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
-        </div>
-        <div class="flexColumn flexCenter reveal">
-          <div class="backgroundImg">
-            <img class="infoImg" src="./assets/warmIntros.png" />
-          </div>
-          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
+          <div class="whiteText">We will provide warm introductions to angel investors interested in your startup</div>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
-      <div class="emptySpace"></div>
-      <div class="infoMargin"> 
-        <div class="whiteTitle" style="color: #721cff">
-          Our Private Events
-        </div>
-        <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
-        <div class="flexRow flexCenter flexWrap">
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Alex Normon</div>
-            <div class="greyText">N49P Partner, AngelList Canada</div>
-            <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Jeff Hoffman</div>
-            <div class="greyText">Investor, Philanthropist</div>
-            <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Andre Charoo</div>
-            <div class="greyText">Maple GP & Inovia Venture Partner</div>
-            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Geri Kirilova</div>
-            <div class="greyText">Laconia MP</div>
-            <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Frederik Groce</div>
-            <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
-            <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-          <div class="flexColumn flexCenter speakerBox reveal">
-            <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
-            <div class="blackTitle speakerTitle">Derrick Raphael</div>
-            <div class="greyText">CEO, Founder</div>
-            <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
-          </div>
-        </div>
-      </div>
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Startups sourced from:
+          Some of our angels come from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/google.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/microsoft.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/coinbase.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/deloitte.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/bcg.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
-            </div>
-          </div>
-          <!-- <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
-            </div>
-          </div> -->
         </div>
-        <div class="smallTitle">...and many more to come</div>
-        <div class="accCallButton"><a href="./angel-form" class="callButton">SIGN UP</a></div>
+        <div style="height: 50px"></div>
+        <div class="smallTitle">and more</div>
+        <div style="height: 50px"></div>
+        <div class="accCallButton"><a href="./startup-form" class="callButton">SIGN UP</a></div>
         <div class="emptySpace"></div>
       </div>
     </div>
