--- a/startup.html
+++ b/startup.html
@@ -21,8 +21,8 @@
   <div id="navbar">
     <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
     <div class="navLinks" id="navLinksEx">
-      <a href="./angel-form" class="navLink">Angel sign up</a>
-      <a href="./startup-form" class="navLink">Founder sign up</a>
+      <a href="./angel" class="navLink">Investors</a>
+      <a href="./startup" class="navLink">Founders</a>
     </div>
     <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
     <div id="navExpand" onclick="expandNav()">
@@ -35,8 +35,11 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Commission-free fund raising for startups
+  			Raise money from investors <span style="color:#721cff; font-family: dmBold;">today</span>
   		</p> 
+      <div class="blackTitle minimize" style="color: white; text-align: center;">
+        No commission, no fee, no cut
+      </div>
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
@@ -53,11 +56,11 @@
             <div class="numText">accelerators</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">35<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">35<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">angels</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">400<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">400<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
             <div class="numText">companies</div>
           </div>
           <!-- <div class="flexColumn numCol">
@@ -143,7 +146,7 @@
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Our angels come from:
+          Some of our angels come from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
           <div class="flexColumn aroundPartner">
@@ -165,7 +168,8 @@
             <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
           </div>
         </div>
-        <!-- <div class="smallTitle">...and many more to come</div> -->
+        <div style="height: 50px"></div>
+        <div class="smallTitle">and more</div>
         <div style="height: 50px"></div>
         <div class="accCallButton"><a href="./startup-form" class="callButton">SIGN UP</a></div>
         <div class="emptySpace"></div>
