added universal landing page

--- a/angel.html
+++ b/angel.html
@@ -22,7 +22,7 @@
     <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
     <div class="navLinks" id="navLinksEx">
       <a href="./angel" class="navLink">Investors</a>
-      <a href="./" class="navLink">Founders</a>
+      <a href="./startup" class="navLink">Founders</a>
     </div>
     <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
     <div id="navExpand" onclick="expandNav()">
