--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Raise money from investors <span style="color:#721cff; font-family: dmBold;">today</span>
+  			Raise and invest among the <span style="color:#721cff; font-family: dmBold;">best</span> founders and investors
   		</p> 
-      <div class="blackTitle minimize" style="color: white; text-align: center;">
-        No commission, no fee, no cut
-      </div>
 	</div>
   <div class="mainPage">
-    <div class="secondHeader">
-      <a href="./startup-form" class="callButton centerButton">SIGN UP</a>
+    <div class="secondHeader makeCol">
+      <div class="headerSubTitle">I am...</div>
+      <div class="flexRow">
+        <a href="./angel" class="callButton halfScreen">AN ANGEL</a>
+        <a href="./startup" class="callButton halfScreen">A FOUNDER</a>
+      </div>
     </div>
     <div class="ecosystemBackground" id="shrinkingBox">
       <div class="ecosystem">
@@ -70,110 +71,196 @@
         </div>
       </div>
     </div>
+    <div class="emptySpace"></div>
 
-    <div class="wrapGrid flexCenter">
-      <div class="emptySpace"></div>
+    <div class="infoMargin">
       <div class="whiteTitle" style="color: #721cff">
-        Get funding in 3 easy steps
+        Angel Investing
       </div>
-      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn flexCenter reveal">
-          <div class="backgroundImg">
-            <img class="infoImg" src="./assets/application.png" />
-          </div>
-          <div class="disclaimer">*synthetic company information presented for illustration purposes, not actual startup profile</div>
-        </div>
-        <div class="flexColumn stepsBox reveal">
-          <div class="flexRow imageTitle">
-            <div class="blueTitle">
-              STEP ONE
-            </div>
-          </div>
-          <div class="blackTitle">Join our Community</div>
-          <div class="whiteText">Apply now to let us know who you are and get exposure to our Angel network</div>
-          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
-        </div>
-      </div>
+      <div class="whiteText">Moonarch provides access to a data room of hundreds of currated startups in their early-stage funding rounds. We also provide warm intros with any founder and startup that caught your attention as well as access to prominent events accross North America</div>
+    </div>
+    <div style="height: 50px"></div>
+    <a href="./angel" class="callButton centerButton">LEARN MORE...</a>
 
-      <div class="emptySpace">
-        <img height="100" width="100" class="arrow" src="./assets/arrow1.png" style="transform: translateX(-70px);"  />
-      </div>
+    <div class="emptySpace"></div>
+    <div class="emptySpace"></div>
 
-      <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn stepsBox reveal">
-          <div class="flexRow imageTitle">
-            <!-- <img height="20" width="20" src="./assets/world.png" /> -->
-            <div class="blueTitle">
-              STEP TWO
-            </div>
-          </div>
-          <div class="blackTitle">Pitch your startup</div>
-          <div class="whiteText">Get invited to our demo-days and partnered events to pitch your startup</div>
-          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
-        </div>
-        <div class="flexColumn flexCenter reveal">
-          <div class="backgroundImg">
-            <img class="infoImg" src="./assets/presenting.png" />
-          </div>
-          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
-        </div>
+    <div class="infoMargin">
+      <div class="whiteTitle" style="color: #721cff">
+        Startup Founder
       </div>
-
-      <div class="emptySpace">
-        <img height="100" width="150" class="arrow" src="./assets/arrow2.png" style="transform: translateX(-30px) rotate(5deg);"  />
-      </div>
-
-      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn flexCenter reveal">
-          <div class="backgroundImg">
-            <img class="infoImg" src="./assets/warmIntros2.png" />
-          </div>
-          <div class="disclaimer">*synthetic individual presented for illustration purposes, not actual startup profile</div>
+      <div class="whiteText">Apply today to get exposure to a wide network of angels with a diverse and successful background. Our angel network includes companies such as:</div>
+    </div>
+    <div class="infoMargin">
+      <div class="flexRow flexCenter flexWrap reveal">
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/google.png" /></div>
         </div>
-        <div class="flexColumn stepsBox reveal">
-          <div class="flexRow imageTitle">
-            <!-- <img height="20" width="20" src="./assets/world.png" /> -->
-            <div class="blueTitle">
-              STEP THREE
-            </div>
-          </div>
-          <div class="blackTitle">Warm Introductions</div>
-          <div class="whiteText">We will provide warm introductions to angel investors interested in your startup</div>
-          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/microsoft.png" /></div>
+        </div>
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/coinbase.png" /></div>
+        </div>
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/deloitte.png" /></div>
+        </div>
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/bcg.png" /></div>
+        </div>
+        <div class="flexColumn aroundPartner">
+          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
         </div>
       </div>
+      <div style="height: 20px"></div>
+      <div class="smallTitle">and more</div>
+    </div>
+    <div style="height: 20px"></div>
+    <a href="./startup" class="callButton centerButton">LEARN MORE...</a>
 
+    <div class="emptySpace"></div>
+    <div class="emptySpace"></div>
+
+    <div class="infoMargin"> 
+      <div class="whiteTitle" style="color: #721cff">
+        Our Private Events
+      </div>
+      <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
+      <div class="flexRow flexCenter flexWrap">
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Alex Normon</div>
+          <div class="greyText">N49P Partner, AngelList Canada</div>
+          <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Jeff Hoffman</div>
+          <div class="greyText">Investor, Philanthropist</div>
+          <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Andre Charoo</div>
+          <div class="greyText">Maple GP & Inovia Venture Partner</div>
+          <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Geri Kirilova</div>
+          <div class="greyText">Laconia MP</div>
+          <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Frederik Groce</div>
+          <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
+          <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+        <div class="flexColumn flexCenter speakerBox reveal">
+          <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
+          <div class="blackTitle speakerTitle">Derrick Raphael</div>
+          <div class="greyText">CEO, Founder</div>
+          <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="emptySpace"></div>
+    <div class="emptySpace"></div>
+
+    <div class="infoMargin">
+      <div class="whiteTitle" style="color: #721cff">
+        Startups sourced from:
+      </div>
+      <div class="flexRow flexCenter flexWrap reveal">
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
+          </div>
+        </div>
+        <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
+          </div>
+        </div>
+        <!-- <div class="aroundPartner">
+          <div class="flexColumn partnerLogo">
+            <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
+          </div>
+        </div> -->
+      </div>
+      <div class="smallTitle">...and many more to come</div>
+      <div class="accCallButton makeCol addTop">
+        <a href="./angel" class="callButton">ANGELS</a>
+        <a href="./startup" class="callButton">FOUNDERS</a>
+      </div>
       <div class="emptySpace"></div>
-      <div class="infoMargin">
-        <div class="whiteTitle" style="color: #721cff">
-          Some of our angels come from:
-        </div>
-        <div class="flexRow flexCenter flexWrap reveal">
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/google.png" /></div>
-          </div>
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/microsoft.png" /></div>
-          </div>
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/coinbase.png" /></div>
-          </div>
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/deloitte.png" /></div>
-          </div>
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/bcg.png" /></div>
-          </div>
-          <div class="flexColumn aroundPartner">
-            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
-          </div>
-        </div>
-        <div style="height: 50px"></div>
-        <div class="smallTitle">and more</div>
-        <div style="height: 50px"></div>
-        <div class="accCallButton"><a href="./startup-form" class="callButton">SIGN UP</a></div>
-        <div class="emptySpace"></div>
-      </div>
     </div>
   </div>
 
