--- a/startup.html
+++ b/startup.html
@@ -146,7 +146,7 @@
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Some of our angels come from:
+          Our angels come from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
           <div class="flexColumn aroundPartner">
